[gd_scene load_steps=2 format=3 uid="uid://cq3k7m5xywb8k"]

[ext_resource type="Script" path="res://src/ui/TutorialHelpPanel.gd" id="1_tutorial_help"]

[node name="TutorialHelpPanel" type="Panel"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -520.0
offset_right = 350.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_tutorial_help")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RuleTitleContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RuleTitle" type="Label" parent="MarginContainer/VBoxContainer/RuleTitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Tutorial Rule Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RuleDescriptionPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RuleDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer/RuleDescriptionPanel"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
bbcode_enabled = true
text = "Rule description goes here..."
fit_content = true
scroll_active = false

[node name="ProblemNumberLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Problem 1/10 (Easy)"
horizontal_alignment = 1

[node name="ProblemHintPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProblemHint" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ProblemHintPanel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
text = "Problem-specific hint goes here..."
fit_content = true
scroll_active = false

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Close Help"
